--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Do It</string>
+    <string name="app_name">SimpleNote</string>
     <string name="title">Title</string>
     <string name="note">Add your note here.</string>
     <string name="title_activity_base" translatable="false">BaseActivity</string>
@@ -8,4 +8,6 @@
     <string name="About">About</string>
     <string name="Setting">Setting</string>
     <string name="Search">Search</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="preset">Showcase</string>
 </resources>
